# StormForge

./: README.md  index.html  package.json  preload.js  style.css
locales/: en.json  ja.json
progress/: INDEX.md  tauri-migration-feasibility.md
rust/: Cargo.toml
rust/apps/native/: Cargo.toml  build.rs
rust/apps/native/src/: i18n.rs  main.rs
rust/apps/native/ui/: main.slint
rust/crates/stormforge-core/: Cargo.toml
rust/crates/stormforge-core/examples/: bench_apply.rs
rust/crates/stormforge-core/src/: apply.rs  fsops.rs  lib.rs  manifest.rs  metadata.rs  mods.rs  playlists.rs  rom.rs  share.rs  steam.rs  store.rs
rust/scripts/: bundle-macos.sh
src/main/: ipcHandlers.js  modService.js
src/renderer/: eventHandlers.js  ui.js
