[package]
name = "stormforge-native"
version = "0.2.0"
edition = "2021"
description = "Slint-based native GUI MVP for StormForge."

[dependencies]
stormforge-core = { path = "../../crates/stormforge-core" }
# Software renderer only: the UI is static, and on macOS the GPU path costs ~46MB of
# IOSurface/graphics memory (measured footprint 103MB vs 57MB with software rendering).
# `software-renderer-systemfonts` keeps system font loading (needed for Japanese text).
slint = { version = "1", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-software",
    "software-renderer-systemfonts",
    "accessibility",
    "image-default-formats",
    # Exposes the winit window-event hook used for OS file drag-and-drop
    # (WindowEvent::DroppedFile/HoveredFile) — no stable Slint API covers this yet.
    "unstable-winit-030",
] }
rfd = "0.15"
serde_json = "1"
dirs = "5"
arboard = "3"
chrono = "0.4"

[build-dependencies]
slint-build = "1"
