[package]
name = "stormforge-core"
version = "0.1.0"
edition = "2021"
description = "Core logic for StormForge (store, mods, share strings, Steam detection) shared across native frontends."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
base64 = "0.22"
quick-xml = { version = "0.36", features = ["serialize"] }
zip = "2"
dirs = "5"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
